 * Added --dont-stop and --stop-at-time options.
 * Added --log-command option to use instead of multiple --log-command-VCS options.
 * Added --hide mouse option.
 * Allow --file-idle-time 0 (files will never expire).
 * Allow -start-position random to set a random start position.
 * Replaced --disable-progress and --disable-bloom with arguments to --hide.

0.26:
 * Improved mouse dragging.
 * Holding right mouse button and moving the mouse rotates the view.
 * The middle mouse button now toggles the camera mode.
 * Username positions now scale correctly.
 * Simulation time no longer incremented while paused, counting towards file time lag.
 * M key now toggles mouse visibility.
 * Added --hide option to use instead of multiple --hide-ELEMENT options.

0.25:
 * Bazaar support (John Arbash Meinel).
 * Dragging the mouse on the background moves the camera.
 * Added --camera-mode option (track,overview).
 * Support DOS line endings in logs.
 * Improved compatibility of hg log command (Brendan Cully).
 * Fixed PPM exporter producing blank images on some video cards.
 * Fixed parsing of negative timezones from cvs-exp.pl logs.
 * Fixed various gdb and compiler warnings.

0.24:
 * PPM output speed improvements, including using a second thread (HighlandSun).
 * Now using standard autotools (Flameeyes).
 * Fixed --max-file-lag not working with some custom log files.
 * Gource will stop at the end of the log by default when recording a video.
 * Fixed STDIN stopping working after the first lot of records with tail -f.
 * Added proper exception handling.
 * Print errors to stderr.

0.23:
 * Hiding filenames no longer hides directory names.
 * Fixed --stop-on-idle option.
 * Added --stop-at-end option (more intuitive than --stop-position 1.0).

0.22:
 * Fixed Mercurial log order.

0.21b:
 * Fixed windows build.

0.21: 
 * Some documentation fixes.

0.20:
 * Added bloom effect (turn off with --disable-bloom).